<resources>
    <string name="app_name">安卓学习Demo</string>
    <string name="about_network">网络相关</string>
    <string name="okhttp">OkHttp</string>
    <string name="get_request">GET请求</string>
    <string name="post_request">POST请求</string>
    <string name="upload_file">上传文件</string>
    <string name="upload_files">上传多个文件</string>
    <string name="web_socket_start">websocket启动</string>
    <string name="web_socket_close">websocket关闭</string>
    <string name="web_socket_send">websocket发送</string>
    <string name="socket_io">socketio实现聊天室</string>
    <string name="udp">UDP协议</string>
    <string name="udp_connect">UDP连接</string>
    <string name="udp_close">UDP关闭</string>
    <string name="udp_send">UDP发送</string>
    <string name="udp_clear">清除日志</string>
    <string name="tcp">TCP协议</string>
    <string name="tcp_byte">字节读取</string>
    <string name="tcp_line">行读取</string>
    <string name="tcp_connect">TCP连接</string>
    <string name="tcp_close">TCP关闭</string>
    <string name="tcp_send">TCP发送</string>
    <string name="tcp_clear">清除日志</string>
    <string name="socket_io_connect">连接</string>
    <string name="socket_io_disconnect">断开</string>
    <string name="socket_io_send">发送</string>
    <string name="input_send_message">输入要发送的信息</string>
    <string name="vpn">VPN</string>
    <string name="connect_vpn">连接VPN</string>
    <string name="vpn_disconnect">vpn失去连接</string>
    <string name="vpn_connect">vpn连接</string>
    <string name="vpn_connecting">vpn连接中…</string>

</resources>