<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okhttp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/get_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_request"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/post_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_request"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/upload_file_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_file"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/upload_files_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_files"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/web_socket_start"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/web_socket_start"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/web_socket_send"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/web_socket_send"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/web_socket_close"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/web_socket_close"
                    android:textColor="@color/black" />
            </LinearLayout>

            <Button
                android:id="@+id/socket_io"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/socket_io"
                android:textColor="@color/black" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />
</androidx.constraintlayout.widget.ConstraintLayout>